--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/pose": "^0.5.1675469404",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "lucide-vue-next": "^0.471.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
