feat AI work (beginner)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/pose": "^0.5.1675469404",
+    "@tensorflow/tfjs": "^4.22.0",
     "beanheads-vue": "^1.0.0",
     "lucide-vue-next": "^0.471.0",
     "pinia": "^2.3.0",
