--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mediapipe/pose": "^0.5.1675469404",
     "@tensorflow/tfjs": "^4.22.0",
     "beanheads-vue": "^1.0.0",
+    "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.471.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
